    * we use now DBSCAN from package dbscan.
    * DSC_DBSTREAM gained parameter metric and now also supports 
        Manhattan and Maximum norm. 
    * DSC_DBSTREAM: update gained parameter assignments and function 
        get_clusteR_assignments() to retrieve the MC assignment of the
        clustered data points.
    * cleaned up interface for animate_cluster() and animate_data().

Changes in version 1.1-5 (07/02/15)
    * NAMESPACE now imports non-standard packages correctly.
    * DSC_DBSTREAM uses now Cm instead of noise.
    * fixed iterator bug for DSC_DBSTREAM.
    * evaluate gaines argument noise to control if noise is ignored

Changes in version 1.1-4 (05/24/15)
    * evaluate checks if DSD has cluster labels for external 
	      evaluation measures.
    * DSD_mlbenchmarkGenerator now shuffles data points.
    * DSC_ReadCSV gaines arguments skip and header.
    * DSC_DStream: was reimplemented in C++ (Rcpp),
        number of grids N can now be fixed by the user.
    * DSC_tNN was renamed DSC_DBSTREAM. Uses now SOM-style micro-cluster update 
        and was reimplemented in C++ (Rcpp).

Changes in version 1.1-1 (01/15/15)
    * DSC_DStream: fixed bug with removing too many sporadic grids
    * DSD_ReadCSV now uses readLine so it can read properly from URLs
    * updated vignette

Changes in version 1.1-0 (12/18/14)
    * update now directly dispatches
    * DSC_Memory replaces DSD_Wrapper
    * DSD_ReadCSV replaces DSD_ReadStream. Improved handling of blocking and
      end of stream.
    * added DSD_ReadDB (DBI interface)
    * get_points can now produce cluster and class information

Changes in version 1.0-3 (07/14/14)
    * Fixed precision and recall calculation
    * Added DSC_TwoStage

Changes in version 1.0-2 (06/16/14)
    * Warning for reclusterers removed.
    * plot can now show micro-cluster assignment areas using assignment=TRUE

Changes in version 1.0-1 (06/12/14)
    * Improved documentation
    * Improved DSD_MG